fix detailed on mobile

--- a/src/assets/sass/base/layout.scss
+++ b/src/assets/sass/base/layout.scss
@@ -144,4 +144,13 @@ section{
 			border-right: 10px solid $white;
 		}
 	}
+	@include media-breakpoint-down(sm){
+		justify-content: center;
+		.blackline{
+			display: none;
+		}
+		h5.w-20{
+			width: 100% !important;
+		}
+	}
 }
