--- a/src/assets/sass/commons/bids.scss
+++ b/src/assets/sass/commons/bids.scss
@@ -37,4 +37,9 @@
 			padding: 0 5px;
 		}
 	}
+	&.w-50{
+		@include media-breakpoint-down(sm){
+			width: 100% !important;
+		}
+	}
 }
