--- a/src/assets/sass/commons/loader.scss
+++ b/src/assets/sass/commons/loader.scss
@@ -20,7 +20,7 @@ $rotateAngle: 360 / $numDots;
 	box-sizing:border-box;
 	position:absolute;
 	top: 20px;
-	left: 45%;
+	left: 40%;
 	animation: loader 40s linear infinite;
 }
 .dot {
